--- a/Penbotv1/Base.lproj/Main.storyboard
+++ b/Penbotv1/Base.lproj/Main.storyboard
@@ -3,44 +3,12 @@
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="TgL-Fa-hI6">
-            <objects>
-                <viewController id="uGo-hb-6Wx" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6z5-O4-GVT">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kQy-fP-f0a">
-                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="X3t-FE-Gmq">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X3t-FE-Gmq" id="lSi-8D-7ci">
-                                            <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="7q6-mP-BFp"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="rnX-ht-XQP"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NoP-Fd-HT8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1684" y="-207"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -201,9 +169,9 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="jf3-h0-NI0">
-                        <barButtonItem key="leftBarButtonItem" title="Scan" id="uBo-0K-vNP">
+                        <barButtonItem key="leftBarButtonItem" title="Devices" id="uBo-0K-vNP">
                             <connections>
-                                <segue destination="uGo-hb-6Wx" kind="show" id="Ye4-Xx-o0U"/>
+                                <segue destination="LNE-pu-kzF" kind="showDetail" id="gEH-g2-3fd"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -212,6 +180,28 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="918.2242990654205" y="83.585313174946009"/>
+        </scene>
+        <!--Bluettoth Scan View Controller-->
+        <scene sceneID="9qC-25-kmQ">
+            <objects>
+                <viewController id="Isk-Ga-Zup" customClass="BluettothScanViewController" customModule="Penbotv1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="em1-cC-Hrj">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="7w6-pa-PMN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PDn-Cb-Dtq">
+                        <barButtonItem key="rightBarButtonItem" title="Scan" id="mB5-xj-Fgu">
+                            <connections>
+                                <action selector="BTScanButton:" destination="Isk-Ga-Zup" id="mrn-EK-wvH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="85y-b1-Wu7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2347" y="-218"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="uxO-2b-Gui">
@@ -378,16 +368,43 @@
                     <view key="view" contentMode="scaleToFill" id="J3F-os-cmf">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Penbot is drawing a complex portrait" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-g7-2vG">
+                                <rect key="frame" x="50" y="88" width="328" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ncu-78-avz">
+                                <rect key="frame" x="171" y="417" width="77" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="">
+                                    <imageReference key="image" image="circle.fill" catalog="system" symbolScale="large"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="testButton:" destination="S1A-tY-QyE" eventType="touchUpInside" id="myZ-CD-xQu"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="3ji-ga-14j"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="FYX-g7-2vG" secondAttribute="trailing" constant="50" id="1xE-mc-2Rq"/>
+                            <constraint firstItem="FYX-g7-2vG" firstAttribute="leading" secondItem="3ji-ga-14j" secondAttribute="leading" constant="50" id="3b3-pm-9N8"/>
+                            <constraint firstItem="FYX-g7-2vG" firstAttribute="top" secondItem="3ji-ga-14j" secondAttribute="top" id="onC-hw-4vr"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="QaU-Ph-TeM"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="currentCommandTextField" destination="FYX-g7-2vG" id="TF1-C9-Zmz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FHd-Cr-fs7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2348" y="461"/>
+            <point key="canvasLocation" x="2345.3271028037384" y="460.69114470842334"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="N2p-QW-CrO">
@@ -406,6 +423,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="im2-jW-vzb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="223" y="84"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nrB-9v-nTJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LNE-pu-kzF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Ljj-bs-1UJ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GOb-Hu-3UJ">
+                        <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Isk-Ga-Zup" kind="relationship" relationship="rootViewController" id="MWe-tD-9Tw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cpf-G2-i5X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1684" y="-218"/>
         </scene>
     </scenes>
     <resources>
