--- a/Penbotv1/Base.lproj/Main.storyboard
+++ b/Penbotv1/Base.lproj/Main.storyboard
@@ -288,26 +288,27 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="left" contentVerticalAlignment="fill" text="Please press a command to begin Drawing" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BXB-dd-dw9">
-                                <rect key="frame" x="50" y="76" width="328" height="88"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please press a command to begin drawing" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8s-Qf-BNs">
+                                <rect key="frame" x="20" y="20" width="388" height="72"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="WpM-CK-q4L"/>
+                                    <constraint firstAttribute="height" constant="72" id="Xia-jX-JxK"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="qfw-rw-upr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="qfw-rw-upr" firstAttribute="trailing" secondItem="BXB-dd-dw9" secondAttribute="trailing" constant="50" id="FzF-Vf-nKd"/>
-                            <constraint firstItem="BXB-dd-dw9" firstAttribute="top" secondItem="qfw-rw-upr" secondAttribute="top" constant="76" id="JcJ-ZL-gTd"/>
-                            <constraint firstItem="BXB-dd-dw9" firstAttribute="leading" secondItem="qfw-rw-upr" secondAttribute="leading" constant="50" id="xZI-ZM-rkE"/>
+                            <constraint firstItem="qfw-rw-upr" firstAttribute="trailing" secondItem="x8s-Qf-BNs" secondAttribute="trailing" constant="20" id="GV0-fo-EwL"/>
+                            <constraint firstItem="x8s-Qf-BNs" firstAttribute="top" secondItem="qfw-rw-upr" secondAttribute="top" constant="20" id="m40-ps-1sO"/>
+                            <constraint firstItem="x8s-Qf-BNs" firstAttribute="leading" secondItem="qfw-rw-upr" secondAttribute="leading" constant="20" id="qLe-PI-juY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="du4-qd-eHh"/>
                     <connections>
-                        <outlet property="CurrentCommandTextField" destination="BXB-dd-dw9" id="kbz-NA-k2D"/>
+                        <outlet property="codeTestLabel" destination="x8s-Qf-BNs" id="Vuu-kY-ILt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ua9-Pl-9WI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -393,11 +394,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Penbot is ready for input from the user" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-g7-2vG">
-                                <rect key="frame" x="50" y="88" width="328" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qB-ho-q3o">
                                 <rect key="frame" x="343" y="783" width="60" height="60"/>
                                 <constraints>
@@ -547,6 +543,15 @@
                                     <constraint firstAttribute="width" constant="36" id="CkD-Sf-TvD"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Penbot is ready for input from the user" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2d-53-esw">
+                                <rect key="frame" x="50" y="88" width="328" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" id="gDq-Lg-TU9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3ji-ga-14j"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -561,10 +566,11 @@
                             <constraint firstItem="1qB-ho-q3o" firstAttribute="leading" secondItem="0EH-Ql-In8" secondAttribute="trailing" constant="37" id="6An-TO-81V"/>
                             <constraint firstItem="0EH-Ql-In8" firstAttribute="leading" secondItem="KMX-vZ-fg9" secondAttribute="trailing" constant="26" id="6gH-NT-W67"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="1qB-ho-q3o" secondAttribute="trailing" constant="25" id="7Bn-Ra-Or5"/>
+                            <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="j2d-53-esw" secondAttribute="trailing" constant="50" id="7SL-1A-yBf"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="bottom" secondItem="AR9-in-jFh" secondAttribute="bottom" constant="8" id="9Fn-UG-wHD"/>
+                            <constraint firstItem="j2d-53-esw" firstAttribute="leading" secondItem="3ji-ga-14j" secondAttribute="leading" constant="50" id="9uq-zA-WWt"/>
                             <constraint firstItem="1qB-ho-q3o" firstAttribute="top" secondItem="tf4-Rw-gD8" secondAttribute="bottom" constant="5" id="BqH-ri-HIx"/>
                             <constraint firstItem="0EH-Ql-In8" firstAttribute="top" secondItem="XmF-f5-8dA" secondAttribute="bottom" constant="16.670000000000002" id="CFv-cM-7PB"/>
-                            <constraint firstItem="FYX-g7-2vG" firstAttribute="leading" secondItem="3ji-ga-14j" secondAttribute="leading" constant="50" id="DrR-uh-xXm"/>
                             <constraint firstItem="0EH-Ql-In8" firstAttribute="top" secondItem="l0c-SV-SHi" secondAttribute="bottom" constant="5" id="FLX-nn-VYl"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="bottom" secondItem="2xl-xL-QdB" secondAttribute="bottom" constant="65" id="Tfn-w3-m6p"/>
                             <constraint firstItem="1qB-ho-q3o" firstAttribute="bottom" secondItem="3ji-ga-14j" secondAttribute="bottom" id="Wj4-U6-EJb"/>
@@ -574,10 +580,8 @@
                             <constraint firstItem="1qB-ho-q3o" firstAttribute="top" secondItem="Guu-ct-j6Q" secondAttribute="bottom" constant="10.33" id="fvA-3B-m2a"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="Guu-ct-j6Q" secondAttribute="trailing" constant="37" id="htD-wc-TON"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="bottom" secondItem="H9L-Hv-HgC" secondAttribute="bottom" constant="69.329999999999998" id="i0r-Cc-AqB"/>
-                            <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="FYX-g7-2vG" secondAttribute="trailing" constant="50" id="iAq-RE-Tvs"/>
                             <constraint firstItem="tf4-Rw-gD8" firstAttribute="leading" secondItem="l0c-SV-SHi" secondAttribute="trailing" constant="80" id="jKZ-LT-aqU"/>
                             <constraint firstItem="psl-Pf-Y43" firstAttribute="leading" secondItem="3ji-ga-14j" secondAttribute="leading" constant="37" id="p0g-MQ-DyG"/>
-                            <constraint firstItem="FYX-g7-2vG" firstAttribute="top" secondItem="3ji-ga-14j" secondAttribute="top" id="qhE-8U-ihb"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="trailing" secondItem="Ewf-y6-60b" secondAttribute="trailing" constant="37" id="t89-bp-oVJ"/>
                             <constraint firstItem="3ji-ga-14j" firstAttribute="bottom" secondItem="Ewf-y6-60b" secondAttribute="bottom" constant="8" id="vC8-vI-DzA"/>
                             <constraint firstItem="KMX-vZ-fg9" firstAttribute="bottom" secondItem="3ji-ga-14j" secondAttribute="bottom" id="y63-BT-rHj"/>
@@ -588,7 +592,7 @@
                     <navigationItem key="navigationItem" id="QaU-Ph-TeM"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="currentCommandTextField" destination="FYX-g7-2vG" id="TF1-C9-Zmz"/>
+                        <outlet property="codeTestLabel" destination="j2d-53-esw" id="4t2-IG-sdd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FHd-Cr-fs7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
